--- a/index.html
+++ b/index.html
@@ -1670,286 +1670,7 @@ async function restoreFromDrive(token) {
     Swal.fire('❌ 還原錯誤', e.message, 'error');
   }
 }
-</script>
-<!-- BEGIN: GCal Direct Upload Patch -->
-<style>
-  .icon-btn{ border:1px solid #ddd; background:#fff; padding:6px 8px; border-radius:8px; cursor:pointer; }
-  .icon-btn:hover{ background:#f7f7f7; }
-  .icon-btn svg{ width:18px; height:18px; vertical-align:middle; }
-</style>
-
-<script>
-// ===== Google Calendar Direct Upload (checkbox-selected orders) =====
-// !!! 將下方兩個常數換成你自己的憑證（Google Cloud Console 建立 OAuth Web 用戶端並啟用 Calendar API）
-const GAPI_CLIENT_ID = "YOUR_OAUTH_CLIENT_ID.apps.googleusercontent.com"; // 必填
-const GAPI_API_KEY   = "YOUR_API_KEY"; // 建議填
-const GAPI_DISCOVERY = ["https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest"];
-const GAPI_SCOPES    = "https://www.googleapis.com/auth/calendar.events";
-
-function getAllOrders(){ return (window.orders||[]); }
-
-// 插入單圖示按鈕到 ☁️Google 左邊
-function injectUploadBtn(){
-  const gBtn = document.getElementById('gdriveBackupBtn');
-  if(!gBtn || document.getElementById('uploadToGCalBtn')) return;
-  const btn = document.createElement('button');
-  btn.id = 'uploadToGCalBtn';
-  btn.className = 'icon-btn';
-  btn.type = 'button';
-  btn.title = '一鍵上傳到 Google 日曆（勾選）';
-  btn.setAttribute('aria-label','上傳到 Google 日曆');
-  btn.innerHTML = `
-    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M8 2v3M16 2v3M3.5 9h17"/>
-      <rect x="3.5" y="7" width="17" height="13" rx="2"/>
-      <path d="M8.5 15h7"/>
-      <path d="M6 20c-2.2 0-4-1.7-4-3.8 0-1.7 1.1-3.2 2.8-3.7.5-2.5 2.7-4.3 5.3-4.3 2.3 0 4.3 1.4 5.1 3.5 1.9.1 3.4 1.7 3.4 3.6 0 2-1.7 3.7-3.8 3.7"/>
-    </svg>`;
-  gBtn.parentNode.insertBefore(btn, gBtn);
-  btn.addEventListener('click', onUploadToCalendarClick);
-}
-
-// 表頭加全選；若你的 refreshTable 已加每列 checkbox，這裡只負責表頭
-function ensureSelectColumnExists(){
-  const thead = document.querySelector('table thead tr');
-  if(thead && !thead.querySelector('#selAllForUpload')){
-    const th = document.createElement('th');
-    th.innerHTML = '<input type="checkbox" id="selAllForUpload">';
-    thead.insertBefore(th, thead.firstElementChild);
-    const selAll = th.querySelector('#selAllForUpload');
-    selAll.addEventListener('change', ()=>{
-      document.querySelectorAll('input.rowSel').forEach(ch=> ch.checked = selAll.checked);
-    });
-  }
-}
-
-// 後置補丁：若每列沒有 .rowSel，就在最左插一格（避免動原有模板也能用）
-function backfillRowCheckboxes(){
-  document.querySelectorAll('table tbody tr').forEach((tr, idx)=>{
-    if(tr.querySelector('input.rowSel')) return;
-    const o = (window.orders||[])[idx];
-    const rowId = o && (o.id||'');
-    const td = document.createElement('td');
-    td.innerHTML = `<input type="checkbox" class="rowSel" data-id="${rowId}">`;
-    tr.insertBefore(td, tr.firstElementChild);
-  });
-}
-
-function getSelectedOrders(){
-  const ids = Array.from(document.querySelectorAll('input.rowSel:checked'))
-    .map(el => el.getAttribute('data-id'))
-    .filter(Boolean);
-  if(ids.length===0) return [];
-  const set = new Set(ids.map(String));
-  return getAllOrders().filter(o => set.has(String(o.id)));
-}
-
-function buildEventFromOrder(o, minutes){
-  const tz = 'Asia/Taipei';
-  const date = o.date;
-  const time = o.time || '09:00';
-  const start = new Date(`${date}T${time}:00`);
-  const end   = new Date(start.getTime() + (minutes*60000));
-  const pad2 = n => String(n).padStart(2,'0');
-  const toRFC3339 = d => `${d.getFullYear()}-${pad2(d.getMonth()+1)}-${pad2(d.getDate())}T${pad2(d.getHours())}:${pad2(d.getMinutes())}:00`;
-
-  const fields = {
-    '日期': o.date || '',
-    '時間': o.time || '',
-    '客戶': o.customer || '',
-    '電話': o.phone || '',
-    '地址': o.address || '',
-    '清洗項目': (o.cleanItems||o.items||'') || '',
-    '居住地型態': o.houseType || '',
-    '冷氣位於樓層': o.acFloor || '',
-    '洗衣機位於樓層': o.wmFloor || ''
-  };
-  const desc = Object.entries(fields)
-    .filter(([,v]) => v!==undefined && v!==null && String(v).trim()!=='')
-    .map(([k,v]) => `${k}：${Array.isArray(v)? v.join('、') : v}`)
-    .join('\n');
-
-  return {
-    summary: `${o.customer||'客戶'} 清洗`,
-    location: o.address || '',
-    description: desc,
-    start: { dateTime: toRFC3339(start), timeZone: tz },
-    end:   { dateTime: toRFC3339(end),   timeZone: tz },
-  };
-}
-
-async function onUploadToCalendarClick(){
-  const picked = getSelectedOrders().filter(o => o && o.date && o.time);
-  if(picked.length===0){
-    alert('請先勾選，且必須是「已填日期與時間」的訂單。');
-    return;
-  }
-  const defMinutes = 120;
-  const input = prompt('請輸入行程時長（分鐘）', String(defMinutes));
-  if(input===null) return;
-  const minutes = Math.max(1, parseInt(input,10)||defMinutes);
-
-  try{
-    await ensureGapiLoaded();
-    await ensureSignedIn();
-    const calendarId = 'primary';
-    let ok = 0;
-    for(const o of picked){
-      const ev = buildEventFromOrder(o, minutes);
-      await gapi.client.calendar.events.insert({ calendarId, resource: ev });
-      ok++;
-    }
-    alert(`已上傳 ${ok} 筆到 Google 日曆（${calendarId}）。`);
-  }catch(err){
-    console.error(err);
-    const msg = (err && err.result && err.result.error && err.result.error.message) || err.message || String(err);
-    alert('上傳失敗：' + msg);
-  }
-}
-
-// gapi 載入與授權
-let gapiLoaded = false;
-function loadGapiScript(){
-  return new Promise((resolve, reject)=>{
-    if(document.getElementById('gapiScript')) return resolve();
-    const s = document.createElement('script');
-    s.id = 'gapiScript';
-    s.src = 'https://apis.google.com/js/api.js';
-    s.onload = resolve; s.onerror = reject;
-    document.head.appendChild(s);
-  });
-}
-async function ensureGapiLoaded(){
-  if(gapiLoaded) return;
-  await loadGapiScript();
-  await new Promise(res=> gapi.load('client:auth2', res));
-  await gapi.client.init({ apiKey: GAPI_API_KEY, discoveryDocs: GAPI_DISCOVERY, clientId: GAPI_CLIENT_ID, scope: GAPI_SCOPES });
-  gapiLoaded = true;
-}
-async function ensureSignedIn(){
-  const auth = gapi.auth2.getAuthInstance();
-  if(!auth.isSignedIn.get()){
-    await auth.signIn();
-  }
-}
-
-window.addEventListener('DOMContentLoaded', ()=>{
-  injectUploadBtn();
-  ensureSelectColumnExists();
-  setTimeout(backfillRowCheckboxes, 100);
-});
-</script>
-<!-- END: GCal Direct Upload Patch -->
-
-<script>
-// ===== Robust row→order matching (handles filtering/sorting/pagination) =====
-(function(){
-  // Build a quick index of header name -> column index
-  function getHeaderIndexMap(){
-    const map = {};
-    const ths = document.querySelectorAll('table thead th');
-    ths.forEach((th, i)=>{
-      const name = (th.textContent||'').trim();
-      if(name) map[name] = i;
-    });
-    return map;
-  }
-
-  function cellText(tr, idx){
-    if(!tr || idx==null) return '';
-    const td = tr.querySelectorAll('td')[idx] || null;
-    return (td ? td.textContent : '').trim();
-  }
-
-  function normalizePhone(s){
-    return (s||'').replace(/\D+/g,''); // keep digits
-  }
-
-  function pickBestMatch(cands, sig){
-    if(cands.length<=1) return cands[0]||null;
-    // Try strict match all fields
-    let m = cands.find(o => (o.date||'')===sig.date && (o.time||'')===sig.time &&
-                            (o.customer||'')===sig.customer && normalizePhone(o.phone)===sig.phone);
-    if(m) return m;
-    // Try date+time+phone
-    m = cands.find(o => (o.date||'')===sig.date && (o.time||'')===sig.time &&
-                        normalizePhone(o.phone)===sig.phone);
-    if(m) return m;
-    // Try date+time+customer
-    m = cands.find(o => (o.date||'')===sig.date && (o.time||'')===sig.time &&
-                        (o.customer||'')===sig.customer);
-    if(m) return m;
-    // Fallback first
-    return cands[0]||null;
-  }
-
-  function deriveOrderFromRow(tr){
-    const headers = getHeaderIndexMap();
-    // adjust for leading checkbox column: our header has no text there, so indices line up naturally
-    const sig = {
-      date: cellText(tr, headers['日期']),
-      time: cellText(tr, headers['時間']),
-      customer: cellText(tr, headers['客戶']),
-      phone: normalizePhone(cellText(tr, headers['電話'])),
-      address: cellText(tr, headers['地址'])
-    };
-    // Filter candidates by date/time first to reduce search space
-    const src = (window.orders||[]);
-    let cands = src.filter(o => (o.date||'')===sig.date && (o.time||'')===sig.time);
-    if(cands.length===0){
-      // maybe time not set in data but present in UI badge? ignore in that case
-      cands = src.filter(o => (o.date||'')===sig.date);
-    }
-    const found = pickBestMatch(cands, sig);
-    return found || null;
-  }
-
-  // Enhance existing backfill: assign accurate data-id by row content
-  function fixRowCheckboxBinding(){
-    document.querySelectorAll('table tbody tr').forEach(tr=>{
-      const cb = tr.querySelector('input.rowSel');
-      if(!cb) return;
-      const haveId = cb.getAttribute('data-id');
-      if(haveId) return;
-      const order = deriveOrderFromRow(tr);
-      if(order && (order.id!=null)){
-        cb.setAttribute('data-id', String(order.id));
-      }
-    });
-  }
-
-  // Replace getSelectedOrders to read from row if id missing
-  const originalGetSelectedOrders = window.getSelectedOrders;
-  window.getSelectedOrders = function(){
-    // ensure row linking done
-    fixRowCheckboxBinding();
-    const ids = Array.from(document.querySelectorAll('input.rowSel:checked'))
-      .map(el => el.getAttribute('data-id'))
-      .filter(Boolean);
-    if(ids.length){
-      const set = new Set(ids.map(String));
-      return (window.orders||[]).filter(o => set.has(String(o.id)));
-    }
-    // If still no ids, build orders directly from rows
-    const picked = [];
-    document.querySelectorAll('input.rowSel:checked').forEach(cb=>{
-      const tr = cb.closest('tr');
-      const order = deriveOrderFromRow(tr);
-      if(order) picked.push(order);
-    });
-    return picked;
-  };
-
-  // Run after table renders
-  window.addEventListener('DOMContentLoaded', ()=>{
-    setTimeout(fixRowCheckboxBinding, 200);
-  });
-  // Expose for manual call after refreshTable()
-  window.fixRowCheckboxBinding = fixRowCheckboxBinding;
-})();
-</script>
-
-</body>
+</script></body>
 </html>
 <script>
 // 強制手風琴預設收合（解決部分瀏覽器 <details> 預設展開問題）
