--- a/index.html
+++ b/index.html
@@ -784,8 +784,6 @@ mark {
         const delBtn = document.createElement('button'); delBtn.className='icon-btn danger'; delBtn.textContent='刪除';
         delBtn.addEventListener('click', (ev)=>{ ev.stopPropagation(); if(confirm('確定要刪除此訂單嗎？')){ orders = orders.filter(x=>x.id!==o.id); save(KEY, orders); refreshTable(); }});
         op.appendChild(delBtn);
-  // v39: add Google Calendar per-order button
-  createCalendarButton(o, op);
         tbody.appendChild(tr);
       });
 
@@ -1672,140 +1670,7 @@ async function restoreFromDrive(token) {
     Swal.fire('❌ 還原錯誤', e.message, 'error');
   }
 }
-</script>
-<!-- === Single-Order Google Calendar Sync (v39) === -->
-<script>
-/* ---- OAuth Token (reuse existing client_id) ---- */
-let calendarTokenClient;
-
-function getCalendarAccessToken() {
-  return new Promise((resolve, reject) => {
-    if (!calendarTokenClient) {
-      // 沿用備份用的 client_id（請保持與檔內一致）
-      calendarTokenClient = google.accounts.oauth2.initTokenClient({
-        client_id: '894514639805-g3073pmjvadbasfp1g25r24rjhl9iacb.apps.googleusercontent.com',
-        scope: 'https://www.googleapis.com/auth/calendar.events',
-        callback: (resp) => {
-          if (resp && resp.access_token) resolve(resp.access_token);
-          else reject(new Error('No access token'));
-        }
-      });
-    }
-    // 已授權會靜默拿 token；第一次需要一次同意
-    calendarTokenClient.requestAccessToken({ prompt: '' });
-  });
-}
-
-/* ---- Build Calendar Event payload ---- */
-function buildGCalEventPayload(o) {
-  const tz = 'Asia/Taipei';
-  const pad2 = (n)=> String(n).padStart(2,'0');
-  const iso = (d)=> `${d.getFullYear()}-${pad2(d.getMonth()+1)}-${pad2(d.getDate())}T${pad2(d.getHours())}:${pad2(d.getMinutes())}:00`;
-
-  const start = new Date(`${o.date}T${(o.time || '09:00')}:00`);
-  const end = new Date(start.getTime() + 2 * 60 * 60 * 1000); // 預設 2 小時
-
-  const title = `${o.customer || '客戶'} 清洗安排`;
-  const staff = `作業人員：${o.staff || ''}`;
-  const tel = `電話：${o.phone || ''}`;
-  const slots = `時段：${(o.slots || []).join ? (o.slots || []).join('、') : (o.slots || '')}`;
-  const price = `金額(折後)：${o.netTotal || o.total || 0}`;
-  const note = o.note ? `備註：${o.note}` : '';
-  const desc = [staff, tel, slots, price, note].filter(Boolean).join('\n');
-
-  return {
-    summary: title,
-    location: o.address || '',
-    description: desc,
-    start: { dateTime: iso(start), timeZone: tz },
-    end:   { dateTime: iso(end),   timeZone: tz }
-  };
-}
-
-/* ---- Create or update the calendar event ---- */
-async function createOrUpdateCalendarEvent(order) {
-  if (!order || !order.date || !order.time) {
-    if (window.Swal) Swal.fire('⚠️ 缺少日期或時間', '請先填寫完整的日期與時間', 'warning');
-    else alert('缺少日期或時間：請先填完整');
-    return;
-  }
-  const token = await getCalendarAccessToken();
-  const payload = buildGCalEventPayload(order);
-
-  const headers = {
-    'Authorization': 'Bearer ' + token,
-    'Content-Type': 'application/json'
-  };
-
-  let res;
-  if (order.gcalEventId) {
-    res = await fetch(`https://www.googleapis.com/calendar/v3/calendars/primary/events/${encodeURIComponent(order.gcalEventId)}`, {
-      method: 'PATCH',
-      headers,
-      body: JSON.stringify(payload)
-    });
-  } else {
-    res = await fetch('https://www.googleapis.com/calendar/v3/calendars/primary/events', {
-      method: 'POST',
-      headers,
-      body: JSON.stringify(payload)
-    });
-  }
-
-  if (!res.ok) {
-    const t = await res.text().catch(()=> '');
-    throw new Error('Google Calendar API error: ' + t);
-  }
-
-  const json = await res.json();
-  // 將 eventId 回存到 orders
-  try {
-    if (Array.isArray(window.orders)) {
-      const i = window.orders.findIndex(x => String(x.id) === String(order.id));
-      if (i >= 0) {
-        window.orders[i].gcalEventId = json.id;
-        if (typeof window.save === 'function' && window.KEY) window.save(window.KEY, window.orders);
-      }
-    }
-  } catch(e) { console.warn('回存 eventId 失敗', e); }
-
-  const msg = `${order.customer || ''} ${order.date || ''} ${order.time || ''}`;
-  if (window.Swal) Swal.fire('✅ 已同步到 Google 日曆', msg, 'success');
-  else alert('已同步到 Google 日曆：' + msg);
-}
-
-/* ---- Button factory to be called inside refreshTable() ---- */
-function createCalendarButton(o, opContainer) {
-  try {
-    const calBtn = document.createElement('button');
-    calBtn.className = (opContainer && opContainer.querySelector('.icon-btn')) ? 'icon-btn' : 'btn';
-    calBtn.title = (o && o.gcalEventId) ? '更新 Google 日曆事件' : '上傳到 Google 日曆';
-    calBtn.textContent = '📅';
-    calBtn.style.marginLeft = '4px';
-    const okStatus = ['排定','完成'].includes((o && o.status) || '排定');
-    const okConfirm = !!(o && o.confirmed);
-    // 若想放寬條件，把後面兩個註解掉
-    calBtn.disabled = !(o && o.date && o.time /* && okStatus && okConfirm */);
-
-    calBtn.addEventListener('click', async (ev) => {
-      ev.stopPropagation && ev.stopPropagation();
-      try {
-        await createOrUpdateCalendarEvent(o);
-      } catch (err) {
-        console.error(err);
-        if (window.Swal) Swal.fire('上傳失敗', (err && err.message) || 'Google Calendar API error', 'error');
-        else alert('上傳失敗：' + (err && err.message));
-      }
-    });
-
-    opContainer.appendChild(calBtn);
-  } catch(e) {
-    console.warn('建立📅按鈕失敗', e);
-  }
-}
-</script>
-
-</body>
+</script></body>
 </html>
 <script>
 // 強制手風琴預設收合（解決部分瀏覽器 <details> 預設展開問題）
