--- a/index.html
+++ b/index.html
@@ -228,6 +228,19 @@ mark {
   input, select, textarea { font-size: 16px; } /* avoid iOS zoom */
 }
 
+
+/* === Prune columns & mobile keep-list (injected) === */
+th.col-slot, td.col-slot,
+th.col-status, td.col-status,
+th.col-total, td.col-total {
+  display: none !important;
+}
+
+@media (max-width: 600px) {
+  table td { display: none !important; }
+  table td.keep-mobile { display: block !important; }
+}
+
 </style>
 <script defer="True" src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script></head>
 <body>
@@ -298,12 +311,12 @@ mark {
 <th>作業人員</th>
 <th>客戶</th>
 <th>電話</th>
-<th>時段</th>
+<th class="col-slot">時段</th>
 <th>地址</th>
-<th>狀況</th>
+<th class="col-status">狀況</th>
 <th>確認</th>
 <th>報價單</th>
-<th class="right-align">總金額</th>
+<th class="right-align col-total">總金額</th>
 <th class="right-align">折後</th>
 <th>來源</th>
 <th>操作</th>
@@ -817,10 +830,29 @@ mark {
         const delBtn = document.createElement('button'); delBtn.className='icon-btn danger'; delBtn.textContent='刪除';
         delBtn.addEventListener('click', (ev)=>{ ev.stopPropagation(); if(confirm('確定要刪除此訂單嗎？')){ orders = orders.filter(x=>x.id!==o.id); save(KEY, orders); refreshTable(); }});
         op.appendChild(delBtn);
+        
+        // === Mobile keep list ===
+        // idx: 1:日期 2:時間 4:客戶 5:電話 7:地址 9:確認 10:報價單 12:折後 14:操作
+        try {
+          tr.children[1]?.classList.add('keep-mobile');   // 日期
+          tr.children[2]?.classList.add('keep-mobile');   // 時間
+          tr.children[4]?.classList.add('keep-mobile');   // 客戶
+          tr.children[5]?.classList.add('keep-mobile');   // 電話
+          tr.children[7]?.classList.add('keep-mobile');   // 地址
+          tr.querySelector('.toggle-confirm')?.classList.add('keep-mobile'); // 確認
+          tr.querySelector('.toggle-quote')?.classList.add('keep-mobile');   // 報價單
+          tr.children[12]?.classList.add('keep-mobile');  // 折後
+          tr.querySelector('.op-cell')?.classList.add('keep-mobile');        // 操作
+
+          // === Permanently hidden columns (provide td class hooks) ===
+          tr.children[6]?.classList.add('col-slot');      // 時段
+          tr.children[8]?.classList.add('col-status');    // 狀況
+          tr.children[11]?.classList.add('col-total');    // 總金額
+        } catch(err) { /* noop */ }
+
         tbody.appendChild(tr);
       });
-
-      // Summary
+// Summary
       const sumEl=$('summary'); sumEl.innerHTML='';
       // Only include dated orders of the selected month for sums
       const monthly = orders.filter(o=> o.date && (new Date(o.date).getFullYear()===y) && (new Date(o.date).getMonth()+1===m));
@@ -1166,9 +1198,29 @@ mark {
                         <td>${escapeHtml(e.note||'')}</td>
                         <td class="right-align">${fmtCurrency(e.amount||0)}</td>`;
         tr.addEventListener('click', ()=>fillExpForm(e));
+        
+        // === Mobile keep list ===
+        // idx: 1:日期 2:時間 4:客戶 5:電話 7:地址 9:確認 10:報價單 12:折後 14:操作
+        try {
+          tr.children[1]?.classList.add('keep-mobile');   // 日期
+          tr.children[2]?.classList.add('keep-mobile');   // 時間
+          tr.children[4]?.classList.add('keep-mobile');   // 客戶
+          tr.children[5]?.classList.add('keep-mobile');   // 電話
+          tr.children[7]?.classList.add('keep-mobile');   // 地址
+          tr.querySelector('.toggle-confirm')?.classList.add('keep-mobile'); // 確認
+          tr.querySelector('.toggle-quote')?.classList.add('keep-mobile');   // 報價單
+          tr.children[12]?.classList.add('keep-mobile');  // 折後
+          tr.querySelector('.op-cell')?.classList.add('keep-mobile');        // 操作
+
+          // === Permanently hidden columns (provide td class hooks) ===
+          tr.children[6]?.classList.add('col-slot');      // 時段
+          tr.children[8]?.classList.add('col-status');    // 狀況
+          tr.children[11]?.classList.add('col-total');    // 總金額
+        } catch(err) { /* noop */ }
+
         tbody.appendChild(tr);
       });
-    }
+}
     function gatherExpForm(){ return { id:$('expId').value || crypto.randomUUID(), date:$('expDate').value, category:$('expCategory').value, note:$('expNote').value.trim(), amount:+$('expAmount').value||0, createdAt:$('expId').value?undefined:new Date().toISOString() }; }
     function fillExpForm(e){ $('expId').value=e.id||''; $('expDate').value=e.date||''; $('expCategory').value=e.category||expCats[0]; $('expNote').value=e.note||''; $('expAmount').value=e.amount||0; $('expDelete').disabled=!e.id; }
     function saveExpense(ev){ ev.preventDefault(); const data=gatherExpForm(); if(!data.date){ alert('請輸入日期'); return; } const i=expenses.findIndex(x=>x.id===data.id); if(i>=0){ expenses[i]={...expenses[i], ...data}; } else { expenses.push(data); } save(EXP_KEY, expenses); fillExpForm({}); refreshExpense(); }
