--- a/index.html
+++ b/index.html
@@ -1790,9 +1790,18 @@ async function uploadEventToCalendar(o) {
   const duration = +o.durationMinutes || 120;
   const end = new Date(start.getTime() + duration * 60 * 1000);
   const event = {
-    summary: `${o.customer || '客戶'} 清洗安排`,
+    summary: `${o.city || ''}${o.district ? '-' + o.district : ''}-${o.customer || ''}`,
     location: o.address || '',
     description: [
+      `聯絡人：${o.customer || ''}`,
+      `電話：${o.phone || ''}`,
+      `金額：${o.netTotal || o.total || 0}`,
+      `地址：${o.address || ''}`,
+      o.items ? `清洗項目：${o.items}` : '',
+      o.acFloor ? `冷氣樓層：${o.acFloor}` : '',
+      o.wmFloor ? `洗衣機樓層：${o.wmFloor}` : '',
+      o.note ? `備註：${o.note}` : ''
+    ].filter(Boolean).join('\n'),
       `作業人員：${o.staff || ''}`,
       `電話：${o.phone || ''}`,
       `金額：${o.netTotal || o.total || 0}`,
@@ -1817,8 +1826,7 @@ async function uploadEventToCalendar(o) {
     const err = await res.json();
     alert(`\u274C 上傳失敗：${err.error?.message || '未知錯誤'}`);
   }
-}
-</script>
+}</script>
 <!-- ✅ 加在 refreshTable 的每筆訂單操作欄位中 -->
 <script>
 // 📅 加入 Google 日曆按鈕
