--- a/index.html
+++ b/index.html
@@ -1817,7 +1817,8 @@ async function uploadEventToCalendar(o) {
     const err = await res.json();
     alert(`\u274C 上傳失敗：${err.error?.message || '未知錯誤'}`);
   }
-}</script>
+}
+</script>
 <!-- ✅ 加在 refreshTable 的每筆訂單操作欄位中 -->
 <script>
 // 📅 加入 Google 日曆按鈕
