--- a/index.html
+++ b/index.html
@@ -286,8 +286,7 @@ th.col-total, td.col-total {
 <button id="exportJson">匯出JSON</button>
 <button id="exportXlsx">匯出Excel</button>
 <button class="warn" id="importJson">匯入JSON</button>
-<button class="danger" id="clearAll">清空資料</button>
-<button class="btn" onclick="handleUploadWithAuth(gatherForm())">📅</button></div>
+<button class="danger" id="clearAll">清空資料</button></div>
 </div>
 </header>
 <main class="wrap stack" style="margin-top:16px">
